<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/white">
    <TextView
        android:id="@+id/dialog_notes_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_remark"
        android:textSize="16sp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/dialog_notes_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/remark"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:textSize="14sp"
        android:background="@color/white">
        <requestFocus/>
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/dialog_notes_et"
        android:padding="10dp">
        <Button
            android:id="@+id/dialog_notes_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:background="@drawable/dialog_btn_bg"
            android:textStyle="bold"
            android:layout_marginRight="7dp"/>
        <Button
            android:id="@+id/dialog_notes_btn_ensure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ensure"
            android:background="@drawable/dialog_btn_bg"
            android:textStyle="bold"
            android:layout_marginRight="7dp"/>
    </LinearLayout>

</RelativeLayout>